[tool.poetry]
name = "retry-tasks-lib"
version = "1.2.3"
description = "helpers functions and models for setting up tasks with rq"
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://git.bink.com/libs/retry-tasks-lib"
keywords = ["rq", "sqlalchemy", "flask_admin"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "retry_tasks_lib" },
]

[tool.poetry.dependencies]
python = "^3.9"
rq = "^1.10.0"
SQLAlchemy = "^1.4.25"
requests = "^2.26.0"
sentry-sdk = "^1.4.3"
Flask-Admin = "^1.5.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
xenon = "^0.8.0"
types-requests = "^2.25.9"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1